syntax = "proto3";

package dev;

option go_package = "cmd/protoc-gen-gorums/dev";

import "gorums.proto";
import "google/protobuf/empty.proto";

message Request { 
  string Value = 1;
  uint64 MsgID = 2;
}
message Response { 
  int64 Result = 1;
  uint64 MsgID = 2;
}
message MyResponse {
  string Value = 1;
  int64 Result = 2;
}

// ZorumsService is not meant to be implemented. The generated
// service methods must pass compilation, but no further tests are done.
// Other tests are provided to test the actual generated code.
// The RPCs in this service aims to test various uses of Gorums's
// options and call types, including imported message types and
// multiple RPCs reusing the same input and output types.
service ZorumsService {

  // GRPCCall plain gRPC call; testing that Gorums can ignore these, but that
  // they are added to the _grpc.pb.go generated file.
  rpc GRPCCall(Request) returns (Response) {}

  // ---------------------------------------------------------------
  // QuorumCall variants
  // ---------------------------------------------------------------

  // QuorumCall plain.
  rpc QuorumCall(Request) returns (Response) { option (gorums.qc) = true; }
  // QuorumCall with per_node_arg option.
  rpc QuorumCallPerNodeArg(Request) returns (Response) {
    option (gorums.qc) = true;
    option (gorums.per_node_arg) = true;
  }
  // QuorumCall with qf_with_req option.
  rpc QuorumCallQFWithRequestArg(Request) returns (Response) {
    option (gorums.qc) = true;
    option (gorums.qf_with_req) = true;
  }
  // QuorumCall with custom_return_type option.
  rpc QuorumCallCustomReturnType(Request) returns (Response) {
    option (gorums.qc) = true;
    option (gorums.custom_return_type) = "MyResponse";
  }
  // QuorumCallCombo with all supported options.
  rpc QuorumCallCombo(Request) returns (Response) {
    option (gorums.qc) = true;
    option (gorums.qf_with_req) = true;
    option (gorums.per_node_arg) = true;
    option (gorums.custom_return_type) = "MyResponse";
  }
  // QuorumCallEmpty for testing imported message type.
  rpc QuorumCallEmpty(google.protobuf.Empty) returns (Response) {
    option (gorums.qc) = true;
  }
  // QuorumCallEmpty2 for testing imported message type.
  rpc QuorumCallEmpty2(Request) returns (google.protobuf.Empty) {
    option (gorums.qc) = true;
  }

  // ---------------------------------------------------------------
  // Multicast variants
  // The multicast call type does not support options 'qf_with_req'
  // and 'custom_return_type', since multicast is one-way and so it
  // doesn't make sense to operate on response types.
  // ---------------------------------------------------------------

  // Multicast plain. Response type is not needed here.
  rpc Multicast(stream Request) returns (Response) {
    option (gorums.multicast) = true;
  }
  // MulticastPerNodeArg with per_node_arg option.
  // TODO(meling) currently this is not supported, but compiles as if
  // per_node_arg wasn't specified. Need to implement support.
  rpc MulticastPerNodeArg(stream Request) returns (Response) {
    option (gorums.multicast) = true;
    option (gorums.per_node_arg) = true;
  }
  // Multicast2 is testing whether multiple streams work.
  rpc Multicast2(stream Request) returns (Response) {
    option (gorums.multicast) = true;
  }
  // Multicast3 is testing imported message type.
  rpc Multicast3(stream Request) returns (google.protobuf.Empty) {
    option (gorums.multicast) = true;
  }
  // Multicast4 is testing imported message type.
  rpc Multicast4(stream google.protobuf.Empty) returns (google.protobuf.Empty) {
    option (gorums.multicast) = true;
  }

  // ---------------------------------------------------------------
  // Future variants
  // ---------------------------------------------------------------

  // QuorumCallFuture plain.
  rpc QuorumCallFuture(Request) returns (Response) {
    option (gorums.qc_future) = true;
  }
  // QuorumCallFuturePerNodeArg with per_node_arg option.
  rpc QuorumCallFuturePerNodeArg(Request) returns (Response) {
    option (gorums.qc_future) = true;
    option (gorums.per_node_arg) = true;
  }
  // QuorumCallFutureQFWithRequestArg with qf_with_req option.
  rpc QuorumCallFutureQFWithRequestArg(Request) returns (Response) {
    option (gorums.qc_future) = true;
    option (gorums.qf_with_req) = true;
  }
  // QuorumCallFutureCustomReturnType with custom_return_type option.
  rpc QuorumCallFutureCustomReturnType(Request) returns (Response) {
    option (gorums.qc_future) = true;
    option (gorums.custom_return_type) = "MyResponse";
  }
  // QuorumCallFutureCombo with all supported options.
  rpc QuorumCallFutureCombo(Request) returns (Response) {
    option (gorums.qc_future) = true;
    option (gorums.qf_with_req) = true;
    option (gorums.per_node_arg) = true;
    option (gorums.custom_return_type) = "MyResponse";
  }
  // QuorumCallFuture2 plain; with same return type: Response.
  rpc QuorumCallFuture2(Request) returns (Response) {
    option (gorums.qc_future) = true;
  }
  // QuorumCallFutureEmpty for testing imported message type.
  rpc QuorumCallFutureEmpty(Request) returns (google.protobuf.Empty) {
    option (gorums.qc_future) = true;
  }
  // QuorumCallFutureEmpty2 for testing imported message type; with same return
  // type as QuorumCallFuture: Response.
  rpc QuorumCallFutureEmpty2(google.protobuf.Empty) returns (Response) {
    option (gorums.qc_future) = true;
  }

  // ---------------------------------------------------------------
  // Correctable variants
  // ---------------------------------------------------------------

  // Correctable plain.
  rpc Correctable(Request) returns (Response) {
    option (gorums.correctable) = true;
  }
  // CorrectablePerNodeArg with per_node_arg option.
  rpc CorrectablePerNodeArg(Request) returns (Response) {
    option (gorums.correctable) = true;
    option (gorums.per_node_arg) = true;
  }
  // CorrectableQFWithRequestArg with qf_with_req option.
  rpc CorrectableQFWithRequestArg(Request) returns (Response) {
    option (gorums.correctable) = true;
    option (gorums.qf_with_req) = true;
  }
  // CorrectableCustomReturnType with custom_return_type option.
  rpc CorrectableCustomReturnType(Request) returns (Response) {
    option (gorums.correctable) = true;
    option (gorums.custom_return_type) = "MyResponse";
  }
  // CorrectableCombo with all supported options.
  rpc CorrectableCombo(Request) returns (Response) {
    option (gorums.correctable) = true;
    option (gorums.qf_with_req) = true;
    option (gorums.per_node_arg) = true;
    option (gorums.custom_return_type) = "MyResponse";
  }
  // CorrectableEmpty for testing imported message type.
  rpc CorrectableEmpty(Request) returns (google.protobuf.Empty) {
    option (gorums.correctable) = true;
  }
  // CorrectableEmpty2 for testing imported message type; with same return
  // type as Correctable: Response.
  rpc CorrectableEmpty2(google.protobuf.Empty) returns (Response) {
    option (gorums.correctable) = true;
  }
  rpc StrictOrdering(stream Request) returns (stream Response) {
    option (gorums.qc_strict_ordering) = "MsgID";
  }

  // ---------------------------------------------------------------
  // CorrectableStream variants
  // ---------------------------------------------------------------

  // CorrectableStream plain.
  rpc CorrectableStream(Request) returns (stream Response) {
    option (gorums.correctable_stream) = true;
  }
  // CorrectablePerNodeArg with per_node_arg option.
  rpc CorrectableStreamPerNodeArg(Request) returns (stream Response) {
    option (gorums.correctable_stream) = true;
    option (gorums.per_node_arg) = true;
  }
  // CorrectableQFWithRequestArg with qf_with_req option.
  rpc CorrectableStreamQFWithRequestArg(Request) returns (stream Response) {
    option (gorums.correctable_stream) = true;
    option (gorums.qf_with_req) = true;
  }
  // CorrectableCustomReturnType with custom_return_type option.
  rpc CorrectableStreamCustomReturnType(Request) returns (stream Response) {
    option (gorums.correctable_stream) = true;
    option (gorums.custom_return_type) = "MyResponse";
  }
  // CorrectableCombo with all supported options.
  rpc CorrectableStreamCombo(Request) returns (stream Response) {
    option (gorums.correctable_stream) = true;
    option (gorums.qf_with_req) = true;
    option (gorums.per_node_arg) = true;
    option (gorums.custom_return_type) = "MyResponse";
  }
  // CorrectableEmpty for testing imported message type.
  rpc CorrectableStreamEmpty(Request) returns (stream google.protobuf.Empty) {
    option (gorums.correctable_stream) = true;
  }
  // CorrectableEmpty2 for testing imported message type; with same return
  // type as Correctable: Response.
  rpc CorrectableStreamEmpty2(google.protobuf.Empty) returns (stream Response) {
    option (gorums.correctable_stream) = true;
  }
}
